<resources>
    <string name="app_name">Motivetto</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="content_authority">com.laquysoft.motivetto.app</string>

    <string name="signing_in">Signing in with Google</string>
    <string name="signing_out">Signing out</string>
    <string name="title_activity_main">Type-a-Number Challenge</string>
    <string name="signed_out_greeting">Hello, anonymous user (not signed in)!</string>
    <string name="achievements_not_available">Please sign in to view achievements.</string>
    <string name="leaderboards_not_available">Please sign in to view leaderboards.</string>
    <string name="easy_mode_explanation">You\'re playing in easy mode, so you got the score you requested! Wasn\'t that easy?</string>
    <string name="hard_mode_explanation">You\'re playing in hard mode, so you only got half the score you requested! Isn\'t this game hard?</string>
    <string name="achievement_prime_toast_text">Prime score!</string>
    <string name="achievement_arrogant_toast_text">Arrogant (requested maximum score)!</string>
    <string name="achievement_humble_toast_text">Humble! (requested 0 score)</string>
    <string name="achievement_leet_toast_text">L33t! (got 1337 score)</string>
    <string name="achievement">Achievement</string>
    <string name="your_progress_will_be_uploaded">Your existing achievements and score will be uploaded shortly.</string>
    <string name="what_score_do_you_deserve">What score do you think you deserve?</string>
    <string name="initial_input">00000000000000000000000000</string>
    <string name="timer">Time:  %1$s : %2$s</string>
    <string name="moves">Moves: %1$s</string>
    <string name="digit0"> 0 </string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="clear">Clear</string>
    <string name="ok">OK</string>
    <string name="choose_difficulty">Choose a difficulty to play:</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="see_your_progress">See your progress:</string>
    <string name="show_achievements">Show Achievements</string>
    <string name="show_leaderboards">Show Leaderboards</string>
    <string name="show_stats">Show Statistics</string>
    <string name="sign_in_why">Sign in with Google to share your scores and achievements with your friends.</string>
    <string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="sign_out">Sign out</string>
    <string name="you_win">You win! Your score is:</string>
    <string name="sign_in_to_upload_this_score">Sign in now to upload this score, save your achievements and share your progress with friends.</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="load">Load</string>
    <string name="options">Options</string>
    <string name="empty_stats">No stats available</string>
    <string name="title_widget_stats">Motivetto Stats</string>

    <string name="time_stats">Time: %1$s</string>
    <string name="moves_stats">Moves: %1$s</string>
    <string name="points_stats">Points: %1$s</string>
    <string name="total_tracks_solved">Total Tracks solved: %1$s</string>
    <string name="total_points">Points: %1$s</string>

    <string-array name="words_in_track">
        <item>Help</item>
        <item>Love</item>
        <item>Hate</item>
        <item>Desperate"</item>
        <item>Open</item>
        <item>Close</item>
        <item>Baby</item>
        <item>Girl</item>
        <item>Yeah</item>
        <item>Whoa</item>
        <item>Start</item>
        <item>Finish</item>
        <item>Beginning"</item>
        <item>End</item>
        <item>Fight</item>
        <item>War</item>
        <item>Running</item>
        <item>Want</item>
        <item>Need</item>
        <item>Fire</item>
        <item>Myself</item>
        <item>Alive</item>
        <item>Life</item>
        <item>Dead</item>
        <item>Death</item>
        <item>Kill</item>
        <item>Different"</item>
        <item>Alone</item>
        <item>Lonely</item>
        <item>Darkness</item>
        <item>Home</item>
        <item>Gone</item>
        <item>Break</item>
        <item>Heart</item>
        <item>Floating</item>
        <item>Searching"</item>
        <item>Dreaming</item>
        <item>Serenity</item>
        <item>Star</item>
        <item>Recall</item>
        <item>Think</item>
        <item>Feel</item>
        <item>Slow</item>
        <item>Speed</item>
        <item>Fast</item>
        <item>World</item>
        <item>Work</item>
        <item>Miss</item>
        <item>Stress</item>
        <item>Please</item>
        <item>More</item>
        <item>Less</item>
        <item>only</item>
        <item>World</item>
        <item>Moving</item>
        <item>lasting</item>
        <item>Rise</item>
        <item>Save</item>
        <item>Wake</item>
        <item>Over</item>
        <item>High</item>
        <item>Above</item>
        <item>Taking</item>
        <item>Go</item>
        <item>Why</item>
        <item>Before</item>
        <item>After</item>
        <item>Along</item>
        <item>See</item>
        <item>Hear</item>
        <item>Feel</item>
        <item>Change</item>
        <item>Body</item>
        <item>Being</item>
        <item>Soul</item>
        <item>Spirit</item>
        <item>God</item>
        <item>Angel</item>
        <item>Devil</item>
        <item>Demon</item>
        <item>Believe</item>
        <item>Away</item>
        <item>Everything</item>
        <item>Shared</item>
        <item>Something"</item>
        <item>Everything</item>
        <item>Control</item>
        <item>Heart</item>
        <item>Away</item>
        <item>Waiting</item>
        <item>Loyalty</item>
        <item>Shared</item>
        <item>Remember</item>
        <item>Yesterday"</item>
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Fall</item>
        <item>Memories</item>
        <item>Apart</item>
        <item>Time</item>
        <item>Forever</item>
        <item>Breath</item>
        <item>Lie </item>
        <item>Sleep</item>
        <item>Inside</item>
        <item>Outside</item>
        <item>Catch</item>
        <item>Be</item>
        <item>Pretending</item>
    </string-array>
</resources>
